Fix horizontal spacing between venue badges and paper content
- Add padding-left to content columns for proper spacing
- Reduce padding-right on .abbr since spacing is now handled by column padding
- This properly uses Bootstrap's grid system for consistent spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -679,7 +679,7 @@ footer.sticky-bottom {
       .abbr {
         height: auto;
         margin-bottom: 0.5rem;
-        padding-right: 6rem;
+        padding-right: 1rem;
 
         abbr {
           display: inline-block;
@@ -710,6 +710,11 @@ footer.sticky-bottom {
             font-weight: bold;
           }
         }
+      }
+
+      // Add padding to content column for more horizontal spacing
+      .col-sm-8, .col-sm-10 {
+        padding-left: 2rem;
       }
 
       .title {
